# PROJETO_SO

./: CMakeLists.txt  RequisitoB.txt  RequisitoC_a.txt  RequisitoC_b.txt  RequisitoE_a.txt  RequisitoE_b.txt  apue.h  main.c  mcThreadA.c  mcThreadA.h  mcThreadB.c  mcThreadB.h  mcThreadC.c  mcThreadC.h  monteCarloAB.c  monteCarloAB.h  monteCarloCD_a.c  monteCarloCD_a.h  monteCarloCD_b.c  monteCarloCD_b.h  monteCarloE_a.c  monteCarloE_a.h  monteCarloE_b.c  monteCarloE_b.h  poligon.txt  readme  requisitoAB  requisitoCDA  requisitoCDB  requisitoEA  requisitoEB  requisitoTA  requisitoTB  threadA  threadB  threadC
